fix : Fixed diverting to Jupyter notebook directory
$Subject

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -72,11 +72,15 @@ jobs:
              pwd
              echo pwd
              pip install -r requirements.txt
+
+      - name: Divert to Jupyter notebook directory
+        run:  cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
+        
       - name: Jupyter Notebook Execution
         run: jupyter execute tutorial_credit_scoring.ipynb
         shell: bash 
 
-
+      
   build-r:
     runs-on: ubuntu-latest
 
