--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -74,7 +74,9 @@ jobs:
              pip install -r requirements.txt
 
       - name: Divert to Jupyter notebook directory
-        run:  cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
+        run:  |
+              cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
+              ls -a
         
       - name: Jupyter Notebook Execution
         run: jupyter execute tutorial_credit_scoring.ipynb
