fix: Execute the Jupyter notebook and save the output to a new notebook
  jupyter nbconvert --to notebook --execute /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/tutorial_credit_scoring.ipynb --output /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -83,7 +83,14 @@ jobs:
               pwd
               cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
               pwd
-              jupyter execute tutorial_credit_scoring.ipynb
+               # Install nbconvert
+              pip install nbconvert
+    
+              # Execute the Jupyter notebook and save the output to a new notebook
+              jupyter nbconvert --to notebook --execute /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/tutorial_credit_scoring.ipynb --output /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
+
+              # Print the contents of the executed notebook
+              cat /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
         shell: bash 
 
       
