fix: Fix path issue when creating new notebook
$Subject

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           author_name: Plot update bot
           message: "Update Notebook"
-          add: "output_notebook.ipynb"
+          add: "/home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb"
           
             # Print the contents of the executed notebook
              # cat /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
