--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -89,26 +89,26 @@ jobs:
 
       - name: Divert to Jupyter notebook directory
         run:  |
-              cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
+              cd ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples
               ls -a
         
       - name: Execute Jupyter Notebook
         run: |
-           cd  /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples
+           cd ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples
            pwd
     
-            # Execute the Jupyter notebook and save the output to a new notebook
-            jupyter nbconvert --to notebook --execute /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/${{ github.event.inputs.notebook }} --output /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
+           # Execute the Jupyter notebook and save the output to a new notebook
+           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
 
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
         with:
           author_name: Plot update bot
           message: "Update Notebook"
-          add: "/home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb"
+          add: "${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb"
           
             # Print the contents of the executed notebook
-             # cat /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
+             # cat ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb
         
         # Add a new step to commit and push the changes
       - name: Commit and Push Changes
@@ -118,8 +118,8 @@ jobs:
 
       - name: Persist Logs
         run: |
-          mkdir -p /home/runner/work/EthAIAuditHub/EthAIAuditHub/automation/artifacts
-          cp /home/runner/work/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb /home/runner/work/EthAIAuditHub/EthAIAuditHub/automation/artifacts/
+          mkdir -p ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/automation/artifacts
+          cp ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/examples/output_notebook.ipynb ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/automation/artifacts/
         if: ${{ always() }}
 
       - name: Upload Artifacts
@@ -127,9 +127,7 @@ jobs:
         if: always()
         with:
           name: "Audit Report ${{ github.actor }} - ${{ github.run_number }} "
-          path: /home/runner/work/EthAIAuditHub/EthAIAuditHub/automation/artifacts
-
-          
+          path: ${{ github.workspace }}/EthAIAuditHub/EthAIAuditHub/automation/artifacts         
       
   build-r:
     runs-on: ubuntu-latest
