feat: Added dataset download and utilize extra algorithms feature
$Subject

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -30,6 +30,14 @@ on:
           - "demo_deterministic_reranking.ipynb"
           - "demo_calibrated_eqodds_postprocessing.ipynb"
           - "demo_adversarial_debiasing.ipynb"
+
+      dataset:
+        description: 'Enter Dataset URL'
+        required: false
+
+      algorithm:
+        description: 'Enter Algorithm URL if you need any, except basic algorithms'
+        required: false
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
