--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -32,11 +32,11 @@ on:
           - "demo_adversarial_debiasing.ipynb"
 
       dataset:
-        description: 'Enter Dataset URL'
+        description: '🗃️ Enter Dataset URL'
         required: false
 
       algorithm:
-        description: 'Enter Algorithm URL if you need any, except basic algorithms'
+        description: '💡 Enter Algorithm URL if you need any, except basic algorithms'
         required: false
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -114,7 +114,7 @@ jobs:
            pwd
     
            # Execute the Jupyter notebook and save the output to a new notebook
-           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/examples/output_notebook.ipynb
+           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/output_notebook.ipynb
 
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
@@ -122,9 +122,6 @@ jobs:
           author_name: Plot update bot
           message: "Update Notebook"
           add: "${{ github.workspace }}/examples/output_notebook.ipynb"
-          
-            # Print the contents of the executed notebook
-             # cat ${{ github.workspace }}/examples/output_notebook.ipynb
         
         # Add a new step to commit and push the changes
       - name: Commit and Push Changes
