--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -99,11 +99,15 @@ jobs:
       - name: Unzip the downloaded dataset
         if: ${{ inputs.dataset }}
         run: |
+          run: |
           if [ -f *.zip ]; then
             unzip *.zip
             ls-a
+          elif [ -f *.tar.gz ]; then
+            tar -xzvf *.tar.gz
+            ls-a
           else
-            echo "No zip file found. Skipping unzip."
+            echo "No zip or tar.gz file found. Skipping extraction."
           fi
 
       - name: Lint with flake8
