--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -111,7 +111,7 @@ jobs:
       - name: Copy CSV files to github workspace
         run: |
               if [ -d temp_folder ]; then
-                find temp_folder -type f -name "*.csv" -exec cp -r {} ${{ github.workspace }} \;
+                find temp_folder -type f -name "*.csv" -exec cp -r {} ${{ github.workspace }}/examples \;
                 rm -rf temp_folder
               else
                 echo "Error:No CSV file found."
