--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -4,9 +4,6 @@ name: ⚖ Bias Mitigation Automation
 on:
   workflow_dispatch:
      inputs:
-      name:
-        description: '📗 Enter a name for your notebook (ex: output_notebook.ipynb )'
-        required: true
       notebook:
         description: "⚙️ Select the notebook you need to run."
         default: "ethaiaudithub.ipynb"
@@ -79,7 +76,6 @@ jobs:
           pip install flake8
           pip list
           python -m rpy2.situation
-
       - name: Download basic datasets
         run: |
           wget ${UCI_DB}/adult/adult.data -P aif360/data/raw/adult/
@@ -90,7 +86,6 @@ jobs:
           wget ${PROPUBLICA_GH}/compas-scores-two-years.csv -P aif360/data/raw/compas/
           wget ${UCI_DB}/00222/bank-additional.zip -P aif360/data/raw/bank/ && unzip -j aif360/data/raw/bank/bank-additional.zip -d aif360/data/raw/bank/ && rm aif360/data/raw/bank/bank-additional.zip
           (cd aif360/data/raw/meps;Rscript generate_data.R <<< y)
-
       - name: Download extra datasets
         run: |
           if [ -n "${{ inputs.dataset }}" ]; then
@@ -98,7 +93,6 @@ jobs:
           else
             echo "No dataset URL provided. Skipping download."
           fi
-
       - name: Unzip or untar the downloaded dataset
         if: ${{ inputs.dataset }}
         run: |
@@ -119,7 +113,6 @@ jobs:
               else
                 echo "Error:No CSV file found."
               fi
-
       - name: List all the files in directory
         run: ls -a
 
@@ -129,7 +122,6 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
       - name: Divert to Jupyter notebook directory
         run:  |
               cd ${{ github.workspace }}/examples
@@ -141,25 +133,24 @@ jobs:
            pwd
     
            # Execute the Jupyter notebook and save the output to a new notebook
-           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }}
+           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/output_notebook.ipynb
 
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
         with:
           author_name: Plot update bot
-          message: "Added executed notebook"
-          add: "${{ github.workspace }}/automation/${{ github.event.inputs.name }}"
+          message: "Update Notebook"
+          add: "${{ github.workspace }}/automation/output_notebook.ipynb"
         
         # Add a new step to commit and push the changes
       - name: Commit and Push Changes
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
-
       - name: Persist Logs
         run: |
           mkdir -p ${{ github.workspace }}/automation/artifacts
-          cp ${{ github.workspace }}/automation/${{ github.event.inputs.name }} ${{ github.workspace }}/automation/artifacts/
+          cp ${{ github.workspace }}/automation/output_notebook.ipynb ${{ github.workspace }}/automation/artifacts/
         if: ${{ always() }}
 
       - name: Upload Artifacts
@@ -197,6 +188,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install '.[all]'
-
       - name: Install R package
         run: R CMD INSTALL aif360/aif360-r
