--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
      inputs:
       notebook:
-        description: "⚙️ Select the notebook you need to run."
+        description: "📗 Select the notebook you need to run."
         default: "ethaiaudithub.ipynb"
         type: choice
         options:
@@ -30,6 +30,7 @@ on:
           - "demo_deterministic_reranking.ipynb"
           - "demo_calibrated_eqodds_postprocessing.ipynb"
           - "demo_adversarial_debiasing.ipynb"
+          - "ethical_bias_mitigation.ipynb"
 
       dataset:
         description: '🗃️ Enter Dataset URL'
