--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -42,7 +42,7 @@ on:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-py:
+  bias_detection_automation:
     runs-on: ubuntu-latest
 
     strategy:
