feat: GPU runner is introduced
$Subject

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -42,7 +42,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   automation:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-gpu
 
     strategy:
       fail-fast: false
