--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -14,6 +14,7 @@ on:
         options:
           - "ethaiaudithub.ipynb"
           - "ethaiaudithubDemo.ipynb"
+          - "ethaiaudithubExtended.ipynb"
           - "ethical_bias_mitigation.ipynb"
           - "tutorial_bias_advertising.ipynb"
           - "tutorial_medical_expenditure.ipynb"
@@ -52,7 +53,6 @@ on:
         options:
           - "AdultDataset"
           - "BankDataset"
-          - "CompasDataset"
           - "CompasDataset"
           - "GermanDataset"
           - "LawSchoolGPADataset"
